src/style.css
/* Sticky footer hack */
html, body {
    height: 100%
}

#footer {
    position: relative;
    margin-top: -2em;
    padding-top: 2em;
    height: 2em;
    clear: both;
}

/* Landing page formatting */
figcaption {
    text-align: center;
    font-style: italic;
}

div#about figure {
    text-align: center;
}

div#about p {
    text-align: justify;
}

div#about h2 {
    text-align: center;
}

/* Hide elements */
.secret {
    display: none !important; 
}

.recall-disabled-link {
    pointer-events: none;
    text-decoration: none;
    cursor: default;
    color: gray !important;
}

/* Underline links and turn them purple */
a {
    text-decoration: underline;
}

a:visited {
    color: purple
}

.recall-show:visited {
    color: #0088cc;
}

#footer .a-local {
    color: #0088cc;
}

